<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">GithubUser</string>
    <string name="label_name">%s</string>
    <string name="label_username">\@%s</string>
    <string name="label_following">Following : %s</string>
    <string name="label_followers">Followers : %s</string>
    <string name="label_repo">%s has %s repositories</string>
    <string name="label_company">Company : %s</string>
    <string name="label_location">Location : %s</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="username_have_16_repositories">username have 16 repositories</string>
    <string name="company_google">Company : Google</string>
    <string name="location_jakarta">Location : Jakarta</string>
    <string name="name">Name</string>
    <string name="username">\@username</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="settings">Settings</string>
    <string name="SearchLabel">Search..</string>
    <string name="not_found_label">Data not found</string>
    <string name="label_favorite">Your Favorite</string>
    <string name="key_reminder">reminder</string>
    <string name="title_reminder">Reminder</string>
    <string name="summary_reminder">Daily reminder to return to the application at 09.00 AM</string>
    <string name="key_change_language">language</string>
    <string name="title_change_language">Language</string>
    <string name="summary_change_language">Change your app language</string>
    <string name="alarm_repeat_time">09:00</string>
    <string name="alarm_repeat_message">Explore a new Github user now!</string>
    <string name="alarm_repeat_on_toast">Daily reminder set up</string>
    <string name="alarm_repeat_off_toast">Daily reminder canceled</string>
    <string name="appwidget_text">Favorite User Github</string>
    <string name="empty_text">No data</string>

</resources>